--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "npm run build"tou
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
